manifests/pruebas_uploadfile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pruebaupload
  namespace: test
  labels:
    app: pruebaupload
spec:
  containers:
    - name: builder
      image: chusalvarez/kargo-demo
      imagePullPolicy: Always
      volumeMounts:
      - name: config-volume
        mountPath: /usr/local/apache2/htdocs/
  volumes:
  - name: config-volume
    configMap:
      # Provide the name of the ConfigMap containing the files you want
      # to add to the container
      name: test-files
---
apiVersion: v1
kind: Service
metadata:
  name: pruebaupload
  namespace: test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pruebaupload
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pruebaupload
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: nginx
  rules:
  - host: pruebkarg2.int.live.foam.io
    http:
      paths:
      - backend:
          service:
            name: pruebaupload
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
